feat: adiciona busca de recursos com filtros opcionais